# server/src/controllers/reportController.ts
@@ -1,10 +1,17 @@
 import { Body, Controller, Post, Produces, Response, Route, SuccessResponse, Tags } from 'tsoa';
 import { FileSettings, prepareFileResponse } from '../helpers/fileManager';
 import { ApiError, HTTPStatus, InternalError, ValidateErrorJSON } from '../helpers/customError';
-import ReportService, { FineReportParameters } from '../services/reportService';
+import ReportService, {
+  FineReportParameters, UserReportParameters
+} from '../services/reportService';
 
 export interface FineRouteParams {
   params: FineReportParameters;
+  settings: FileSettings;
+}
+
+export interface UserRouteParams {
+  params: UserReportParameters;
   settings: FileSettings;
 }
 
@@ -13,7 +20,7 @@ export interface FineRouteParams {
 @Tags('Report')
 export class ReportController extends Controller {
   /**
-   * Generates a report as Tex of PDF file.
+   * Generates a fine report as Tex or PDF file.
   */
   @Post('fines')
   @Response<ValidateErrorJSON>(422, 'Validation Failed')
@@ -23,6 +30,28 @@ export class ReportController extends Controller {
     @Body() params: FineRouteParams
   ): Promise<any> {
     let fileName: string = await new ReportService().generateFineReport(
+      params.settings,
+      params.params,
+    );
+    if (fileName === undefined)
+      throw new ApiError(
+        HTTPStatus.InternalServerError,
+        'Something went wrong when generating a report. No file was generated.'
+      );
+    return prepareFileResponse(this, fileName);
+  }
+
+  /**
+   * Generates a sales report as Tex or PDF file.
+   */
+  @Post('user')
+  @Response<ValidateErrorJSON>(422, 'Validation Failed')
+  @Response<InternalError>(500, 'Internal Server Error')
+  @SuccessResponse(200, 'Ok')
+  public async generateUserReport(
+    @Body() params: UserRouteParams
+  ): Promise<any> {
+    let fileName: string = await new ReportService().generateUserReport(
       params.settings,
       params.params,
     );
